# src/api/private/routes/user.api.ts
@@ -1,7 +1,9 @@
 import { UserController } from "@/core/interfaces/controllers";
 import { Router } from "express";
 const router = Router();
-const { profile, signout } = UserController;
-router.get("/", profile).get("/signout", signout);
+
+const { profile, signout, getChats } = UserController;
+
+router.get("/me", profile).get("/signout", signout).get("/chats", getChats);
 
 export default router;
