# src/core/app/dto/api.dto.ts
@@ -5,3 +5,20 @@ export type User = {
   email: string;
   createdAt: Date;
 };
+
+export type Answer = {
+  id: string;
+  prompt: string;
+  answer: string;
+  idea: string;
+};
+
+export type Chat = {
+  id: string;
+  name: string;
+  createdAt: Date;
+};
+
+export type Conversation = Chat & {
+  answers: Answer[];
+};
